@@ -87,21 +87,35 @@ public class InterningAnnotatedTypeFactory extends BaseAnnotatedTypeFactory {
         );
     }
 
+    /** @deprecated Use {@link #addComputedTypeAnnotations(Tree,AnnotatedTypeMirror,boolean} */
+    @Deprecated
     @Override
     public void annotateImplicit(Tree tree, AnnotatedTypeMirror type, boolean useFlow) {
+        addComputedTypeAnnotations(tree, type, useFlow);
+    }
+
+    @Override
+    public void addComputedTypeAnnotations(Tree tree, AnnotatedTypeMirror type, boolean useFlow) {
         Element element = InternalUtils.symbol(tree);
         if (!type.isAnnotatedInHierarchy(INTERNED) && ElementUtils.isCompileTimeConstant(element)) {
             type.addAnnotation(INTERNED);
         }
-        super.annotateImplicit(tree, type, useFlow);
+        super.addComputedTypeAnnotations(tree, type, useFlow);
+    }
+
+    /** @deprecated Use {@link #addComputedTypeAnnotations(Element,AnnotatedTypeMirror} */
+    @Deprecated
+    @Override
+    public void annotateImplicit(Element element, AnnotatedTypeMirror type) {
+        addComputedTypeAnnotations(element, type);
     }
 
     @Override
-    public void annotateImplicit(Element element, AnnotatedTypeMirror type) {
+    public void addComputedTypeAnnotations(Element element, AnnotatedTypeMirror type) {
         if (!type.isAnnotatedInHierarchy(INTERNED) && ElementUtils.isCompileTimeConstant(element)) {
             type.addAnnotation(INTERNED);
         }
-        super.annotateImplicit(element, type);
+        super.addComputedTypeAnnotations(element, type);
     }
 
     /**
