@@ -34,15 +34,22 @@ public class LinearAnnotatedTypeFactory extends BaseAnnotatedTypeFactory {
         this.postInit();
     }
 
+    /** @deprecated Use {@link #addComputedTypeAnnotations(Element,AnnotatedTypeMirror} */
+    @Deprecated
+    @Override
+    public void annotateImplicit(Element elt, AnnotatedTypeMirror type) {
+        addComputedTypeAnnotations(elt, type);
+    }
+
     /**
      * Case 1: type of class declaration
      */
     @Override
-    public void annotateImplicit(Element elt, AnnotatedTypeMirror type) {
+    public void addComputedTypeAnnotations(Element elt, AnnotatedTypeMirror type) {
         if (!type.isAnnotatedInHierarchy(LINEAR) && elt.getKind().isClass()) {
             type.addAnnotation(UNUSABLE);
         }
-        super.annotateImplicit(elt, type);
+        super.addComputedTypeAnnotations(elt, type);
     }
 
     // TODO: Re-enable flow with the new org.checkerframework.dataflow framework.
