@@ -56,9 +56,16 @@ public class PolyAllAnnotatedTypeFactory extends BaseAnnotatedTypeFactory {
         return new MultiGraphQualifierHierarchy(factory);
     }
 
+    /** @deprecated Use {@link #addComputedTypeAnnotations(Tree,AnnotatedTypeMirror,boolean} */
+    @Deprecated
     @Override
     protected void annotateImplicit(Tree tree, AnnotatedTypeMirror type, boolean iUseFlow) {
-        super.annotateImplicit(tree, type, iUseFlow);
+        addComputedTypeAnnotations(tree, type, iUseFlow);
+    }
+
+    @Override
+    protected void addComputedTypeAnnotations(Tree tree, AnnotatedTypeMirror type, boolean iUseFlow) {
+        super.addComputedTypeAnnotations(tree, type, iUseFlow);
         if (tree.getKind() == Kind.VARIABLE && ((VariableTree) tree).getName().toString().contains("addH1S2")) {
             type.replaceAnnotation(H1S2);
         }
